Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11928

Soft assert SOFT ASSERT: "isLoaded()" in file .\qtversionmanager.cpp, line 505

XMLWordPrintable

    • 4d836596def67db9e01caee55b54a0557ec26b2a

      0	QtSupport::QtVersionManager::versions	qtversionmanager.cpp	506	0x7ffbd9f8ef77	
      1	WinRt::Internal::WinRtDeviceFactory::findRunnerFilePath	winrtdevicefactory.cpp	148	0x7ffbda7f516d	
      2	WinRt::Internal::WinRtDeviceFactory::autoDetect	winrtdevicefactory.cpp	91	0x7ffbda7f4ab6	
      3	WinRt::Internal::WinRtDeviceFactory::onDevicesLoaded	winrtdevicefactory.cpp	116	0x7ffbda7f4d43	
      4	QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (__cdecl WinRt::Internal::WinRtDeviceFactory::*)(void) __ptr64>::call	qobjectdefs_impl.h	508	0x7ffbda7fb89c	
      5	QtPrivate::FunctionPointer<void (__cdecl WinRt::Internal::WinRtDeviceFactory::*)(void) __ptr64>::call<QtPrivate::List<>,void>	qobjectdefs_impl.h	528	0x7ffbda7fb517	
      6	QtPrivate::QSlotObject<void (__cdecl WinRt::Internal::WinRtDeviceFactory::*)(void) __ptr64,QtPrivate::List<>,void>::impl	qobject_impl.h	152	0x7ffbda7fb94e	
      7	QtPrivate::QSlotObjectBase::call	qobject_impl.h	132	0x70b3fe98	
      8	QMetaObject::activate	qobject.cpp	3671	0x70b2f6e0	
      9	QMetaObject::activate	qobject.cpp	3547	0x70b2ef98	
      10	ProjectExplorer::DeviceManager::devicesLoaded	moc_devicemanager.cpp	243	0x7ffbe13e3804	
      11	ProjectExplorer::DeviceManager::load	devicemanager.cpp	176	0x7ffbe136244c	
      12	ProjectExplorer::ProjectExplorerPlugin::extensionsInitialized	projectexplorer.cpp	1136	0x7ffbe117a5ed	
      13	ExtensionSystem::Internal::PluginSpecPrivate::initializeExtensions	pluginspec.cpp	1041	0x7ffbe989432e	
      14	ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin	pluginmanager.cpp	1133	0x7ffbe9884fa2	
      15	ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins	pluginmanager.cpp	1020	0x7ffbe98848ba	
      16	ExtensionSystem::PluginManager::loadPlugins	pluginmanager.cpp	337	0x7ffbe9880730	
      17	main	main.cpp	508	0x7ff6418eb495	
      18	__tmainCRTStartup	crtexe.c	626	0x7ff6418f02fd	
      19	mainCRTStartup	crtexe.c	466	0x7ff6418f042e	
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes