WinRt: detect devices when all prerequisites are loaded

Task-number: QTCREATORBUG-11928

Change-Id: I86ae446e01e3c1c7fe53df886428437f3eda7c18
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>